examples/spring-cloud-grayscale-with-eureka/eureka-server/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
        - name: gateway
          image: koderover.tencentcloudcr.com/test/eureka:latest
          ports:
            - containerPort: 8761
